Resolve overflow issues
I can’t say that I fully understood why these styles where applied in the first place, so I'm not entirely sure this isn't breaking anything, but at first look everything seems okay.

--- a/ui/src/components/Document/DocumentViewMode.scss
+++ b/ui/src/components/Document/DocumentViewMode.scss
@@ -6,7 +6,6 @@
 
   .outer {
     flex: 2;
-    padding: ($aleph-grid-size * 0.5);
 
     .inner {
       background: white;
